6 JCK manual awt/Desktop tests fail with GTKLookAndFeel - GTK intialization issue

XMLWordPrintable

    • b115
    • x86
    • linux
    • Verified

        Desc:
          6 api/java_awt/interactive/Desktop fail with error in JDK 7 since b94:

            GThread-ERROR **: GThread system may only be initialized once.

        Filed separate CR as this is JCK tests failure which is not related to SWT GTK usage
        as it states in CR 6922280 synopsis.

        See comments for details.

              Assignee:
              Alexander Zvegintsev
              Reporter:
              Dmitriy Gubkin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              12 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: